made part of main page

--- a/oftum.kz/css/_normalize.scss
+++ b/oftum.kz/css/_normalize.scss
@@ -33,9 +33,7 @@ ul {
     margin-top: 0;
     margin-bottom: 0rem;
     padding-left: 0rem;
-    li {
-        list-style-type: none;
-    }
+    list-style: none;
 }
 
 .h1,
