--- a/oftum.kz/css/style.scss
+++ b/oftum.kz/css/style.scss
@@ -97,13 +97,10 @@
         .cities {
            background-image: url(../img/select.svg);
            background-repeat: no-repeat;
-           background-position: 87px 8px;
+           background-position: 93px 8px;
             &:focus {
                 background-image: url(../img/select-up.png);
             }
-           &::part(listbox) {
-            padding: 14px;
-           }
         }
         .select-arrow {
             position: absolute;
@@ -128,7 +125,7 @@
             font-size: 14px;
             line-height: 150%;
             color: #0B83CF;
-            margin-left: 7px;
+            padding-left: 7px;
             &:active {
                 border: none;
                 
@@ -891,7 +888,7 @@
     &__content {
         padding-top: 50px;
         width: 100%;
-        height: 400px;
+        height: 430px;
     }
     &__img {
         position: absolute;
@@ -990,6 +987,12 @@
             border-radius: 8px;
             height: 44px;
             padding: 12px 15px; 
+            background-image: url(../img/select.svg);
+            background-repeat: no-repeat;
+            background-position: 93px 20px;
+            &:focus {
+                background-image: url(../img/select-up.png);
+            }
         }
     }
     &__content {
@@ -1148,6 +1151,9 @@
 }
 
 .standarts {
+    &__mobile {
+        display: none;
+    }
     margin-bottom: 100px;
     &__all {
         text-align: center;
@@ -1182,14 +1188,14 @@
         right: 44%;
         background-image: url(./../img/arrow-right2.svg);
     }
-    &__title {
-        width: 77%;
-    }
     &__content {
         display: grid;
         gap: 30px;
         grid-template-columns: repeat(11, 1fr);
         grid-template-rows: repeat(2, 1fr);
+    }
+    &__title {
+        width: 77%;
     }
     &__text {
         width: 75%;
@@ -1202,7 +1208,7 @@
         img {
             width: 100%;
             height: 100%;
-        }
+        }  
         &:nth-child(1) {
             grid-area: 2 / 1 / 3 / 5; 
         }
@@ -1217,7 +1223,7 @@
         }
         &:nth-child(5) {
             grid-area: 1 / 7 / 2 / 12;
-        }     
+        }      
     }   
 }
 
@@ -1427,8 +1433,7 @@ select {
     padding-right: 25px;
     border: none;
     outline: none;
-    cursor: pointer;
-    
+    cursor: pointer;    
     &:active {
         border: none;
     }
@@ -1791,6 +1796,11 @@ select {
             padding: 15px 20px 22px;
         }
     }
+    .burger {
+        &__content {
+            width: 65%;
+        }
+    }
     .banner {
         &__title {
             font-size: 22px;
@@ -2078,6 +2088,22 @@ select {
             a {
                 margin-left: 5%;
             }
+        }
+        &__slider {
+            display: none;
+        }
+        &__mobile {
+            display: block;
+        }
+        &__item {
+            height: 230px;
+            margin: 0 10px
+        }
+        &__title {
+            width: 100%;
+        }
+        &__text {
+            width: 100%;
         }
     }
     .video {
@@ -2696,6 +2722,11 @@ select {
         }
         &__made {
             justify-content: center;
+        }
+    }
+    .burger {
+        &__content {
+            width: 80%;
         }
     }
 }
